Check-in missing package configure port in swagger-autogen
