# server/swagger.js
@@ -3,6 +3,24 @@ const swaggerAutogen = require('swagger-autogen')()
 const outputFile = './swagger_output.json'
 const endpointsFiles = ['./server.js']
 
-swaggerAutogen(outputFile, endpointsFiles).then(() => {
+const doc = {
+    info: {
+        version: "1.0.0",
+        title: "My API",
+        description: "Documentation automatically generated by the <b>swagger-autogen</b> module."
+    },
+    host: "localhost:5000",
+    basePath: "/",
+    schemes: ['http', 'https'],
+    consumes: ['application/json'],
+    produces: ['application/json'],
+    tags: [
+        {
+            "name": "User",
+            "description": "Endpoints"
+        }
+    ],
+}
+swaggerAutogen(outputFile, endpointsFiles, doc).then(() => {
     require('./server.js')
 })
